Convert to Vercel export default format

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**",
-      "use": "@vercel/static"
-    }
+  "rewrites": [
+    { "source": "/api/sap-stock", "destination": "/api/sap-stock.js" },
+    { "source": "/api/sap-mrp", "destination": "/api/sap-mrp.js" },
+    { "source": "/api/sap-orders", "destination": "/api/sap-orders.js" },
+    { "source": "/api/weather", "destination": "/api/weather.js" },
+    { "source": "/api/ai-analysis", "destination": "/api/ai-analysis.js" },
+    { "source": "/(.*)", "destination": "/public/$1" }
   ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/public/$1" }
-  ]
+  "functions": {
+    "api/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  }
 }
