--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.6.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
